--- a/style.css
+++ b/style.css
@@ -1,25 +1,28 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@200;300;400;600;700;800;900&display=swap');
 
-*{
+* {
     padding: 0;
     margin: 0;
-    font-family: 'poppins',sans-serif;
+    font-family: 'poppins', sans-serif;
+    box-sizing: border-box;
 }
+
 body {
     background-color: black;
 }
-.main{
-background-image: url("assets/images/bg2.jpg");
-background-position: center center;
-background-size: max(1200px,100vw);
-background-repeat: no-repeat;
-height: 70vh;
-position: relative;
+
+.main {
+    background-color: rgba(0, 0, 0, 0.644);
+    background-image: url("assets/images/bg2.jpg");
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    position: relative;
+    background-blend-mode: multiply;
 }
 
-.main .box{
+.main .box {
     height: 70vh;
     width: 100%;
     opacity: 0.69;
@@ -28,6 +31,7 @@ position: relative;
     position: absolute;
 
 }
+
 nav {
     max-width: 60vw;
     margin: auto;
@@ -36,19 +40,28 @@ nav {
     justify-content: space-between;
     height: 62px;
 }
+
 nav img {
     color: red;
     width: 114px;
     position: relative;
     z-index: 10;
 }
-nav button{
+
+nav button {
     position: relative;
     z-index: 10;
 }
-.hero  {
-    font-family: 'Martel Sans',sans-serif;
-    height: calc(100%-62px);
+
+nav>div {
+    display: flex;
+    /* background-color: red; */
+    gap: 10px;
+}
+
+.hero {
+    font-family: 'Martel Sans', sans-serif;
+    height: calc(100vh - 62px);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -57,58 +70,77 @@ nav button{
     position: relative;
     gap: 23px;
     padding: 0 30px;
-
+    /* background-color: antiquewhite; */
 }
-.hero> :first-child{
-    font-family: 'poppins',sans-serif;
+
+.hero> :first-child {
+    font-family: 'poppins', sans-serif;
     font-weight: bolder;
     font-size: 48px;
     text-align: center;
 }
-.hero> :nth-child(2){
+
+.hero> :nth-child(2) {
     font-weight: 400;
     font-size: 24px;
-text-align: center;
+    text-align: center;
 }
-.hero> :nth-child(3){
+
+.hero> :nth-child(3) {
     font-weight: 400;
     font-size: 20px;
-  text-align: center;  
+    text-align: center;
 }
-.separation{
+
+.separation {
     height: 7px;
     background-color: rgb(46, 44, 44);
     position: relative;
     z-index: 20;
 }
+
 .btn {
-    padding: 3px 8px;
+    /* padding: 3px 8px; */
     font-weight: 400;
-    color:white;
-    background-color: rgba(248,243,243,0.021);
+    color: white;
+    background-color: rgba(248, 243, 243, 0.021);
     border-radius: 4px;
     border: 1px solid white;
     cursor: pointer;
+    padding: 10px;
 }
+
 .btn-red {
-background-color: red;
-font-weight: 400;
-color: white;
-padding: 3px 24px;
-font-size: 20px;
-border-radius: 4px;
+    background-color: red;
+    font-weight: 400;
+    color: white;
+    padding: 3px 24px;
+    font-size: 20px;
+    border-radius: 4px;
 }
-.main input{
-padding: 7px 101px 8px 14px;
-color: white;
-font-weight: 900;
-font-size: 12px;
-border-radius: 4px;
-background-color: rgba(23,23,23,0.2);
+
+.main input {
+    padding: 15px 20px 15px 20px;
+    color: white;
+    font-weight: 900;
+    font-size: 12px;
+    border-radius: 4px;
+    background-color: rgba(23, 23, 23, 0.2);
+    background-color: rgba(115, 157, 157, 0.2);
+    border-style: solid;
+    border-width: 1px;
 }
-.btn-red-sn {
-background-color: red;
-color: white;    
+
+.btn-red {
+    background-color: red;
+    color: white;
+    padding: 11px 20px 11px 20px;
+}
+
+.btn-red-sm {
+    background-color: red;
+    padding: 10px;
+    border: none;
 }
 
 .hero-buttons {
@@ -127,65 +159,68 @@ color: white;
     color: white;
     justify-content: center;
     align-items: center;
-    
+
 }
 
-@media  screen and (max-width: 1300px) {
-    
-    .first{
+@media screen and (max-width: 1300px) {
+    .first {
         flex-wrap: wrap;
     }
 }
 
-.secImg{
+.secImg {
     position: relative;
 }
 
-.secImg img{
+.secImg img {
     width: 555px;
     position: relative;
     z-index: 10;
 }
 
-.secImg video{
+.secImg video {
     position: absolute;
     top: 51px;
     right: 0;
 
 }
+
 section.first>div {
     display: flex;
     flex-direction: column;
     padding: 34px 0;
 }
 
-.first > div:first-child{
+.first>div:first-child {
     font-size: 48px;
     font-weight: bolder;
 
 }
-.first > div:nth-child(2){
+
+.first>div:nth-child(2) {
     font-size: 24px;
 
 
 }
 
-.faq h2{
+.faq h2 {
     text-align: center;
     font-size: 48px;
 }
-.faq{
+
+.faq {
     background-color: #414141;
     color: white;
     padding: 32px;
 }
+
 .faqbox:hover {
-    transition: all 1s ease-out;
-    background-color: gray(37,36,36);
+    transition-duration: 0.5s;
+    background-color: rgb(37, 36, 36);
     color: white;
 }
 
-.faqbox{
+.faqbox {
     color: white;
     font-size: 24px;
     display: flex;
@@ -196,8 +231,9 @@ section.first>div {
     margin: 34px auto;
     cursor: pointer;
 }
-footer{
-    color:white;
+
+footer {
+    color: white;
     max-width: 60vw;
     margin: auto;
     padding: 14px;
@@ -205,33 +241,67 @@ footer{
 
 
 
-footer .questions{
+footer .questions {
     padding: 34px 0;
 
 }
 
 .footer {
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     color: white;
-    }
-
-    @media  screen and (max-width: 1300px){
-        .footer{
-            display:grid;
-            grid-template-columns: 1fr 1fr 1fr 1fr;
-            color: white;
-        }
-    }
-
-    .footer a{
-        font-size: 14px;
+    /* background-color: red; */
+}
+.footer-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: red; */
+}
+/* 
+@media screen and (max-width: 1300px) {
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
         color: white;
     }
+} */
 
-.footer-item{
+.footer a {
+    font-size: 14px;
+    color: white;
+}
+
+.footer-item {
     display: flex;
     flex-direction: column;
     gap: 23px;
 }
-    
+
+@media only screen and (max-width: 600px) {
+    nav {
+        max-width: 100vw;
+        /* margin: auto; */
+        display: flex;
+        /* padding: 10px 0 10px 0; */
+        padding: 10px;
+        align-items: center;
+        justify-content: space-between;
+        height: 62px;
+    }
+    .secImg img {
+        width: 350px;
+        position: relative;
+        z-index: 10;
+    }
+    .secImg video {
+        position: absolute;
+        top: 51px;
+        right: 0;
+        width: 350px;
+    }
+    .hero-buttons{
+        display: flex;
+        flex-direction: column;
+    }
+}
